--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+	<h2>
+	<%= link_to 'Mappr', root_path %>
+	</h2>
+
+	<%= link_to 'New +', new_place_path %>
+	<hr/>
+
 <%= yield %>
 
 </body>
