Google maps works

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,6 +8,12 @@
 		Title: <%= @place.title %>
 		<br/>
 		Address: <%= @place.address %>
+		<br/>
+		lat: <%= @place.lat %>
+		<br/>
+		lng: <%= @place.lng %>
+		<br/>
+
 
 		    <script src="//maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyDzleZt1Cn-Ha1cn19cC8LOKVFueX_iYB4" type="text/javascript"></script>
 
@@ -22,10 +28,10 @@
 
       if (GBrowserIsCompatible()) {
         var map = new GMap2(document.getElementById("map_canvas"));
-        map.setCenter(new GLatLng(37.4419, -122.1419), 13);
+        map.setCenter(new GLatLng(<%= @place.lat  %>, <%= @place.lng %>), 13);
 
 
-          var point = new GLatLng(37.4419, -122.1419);
+          var point = new GLatLng(<%= @place.lat  %>, <%= @place.lng %>);
           map.addOverlay(new GMarker(point));
  
 
